fixed overlap in tree

--- a/tree_jslib/tree_styles.css
+++ b/tree_jslib/tree_styles.css
@@ -80,7 +80,3 @@ white-space:normal;
 word-wrap:break-word;
 }
 
-#tree_container_div
-{
-overflow:auto;
-}
